<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/arsenic">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_preview_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/preview_image"
            android:src="@drawable/ic_image_default" />

        <LinearLayout
            android:id="@+id/upload_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_camera_x"
                style="@style/BtnTifanny"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/regular"
                android:text="@string/camera" />

            <Button
                android:id="@+id/btn_gallery"
                style="@style/BtnTifanny"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/regular"
                android:text="@string/gallery" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="60dp"
            android:autofillHints="Description"
            android:background="@drawable/custom_input"
            android:fontFamily="@font/regular"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:minLines="4"
            android:padding="16dp"
            android:scrollbars="vertical"
            android:textColorHint="@color/bright_gray" />

        <Button
            android:id="@+id/btn_upload"
            style="@style/BtnTifanny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/regular"
            android:text="@string/upload" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>